--- a/chat.html
+++ b/chat.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat - NYERILOVELITE</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -9,7 +10,12 @@
     <nav>
         <div class="logo">NYERI<span style="color:var(--gold)">LOVELITE</span></div>
         <div class="nav-links">
-            <a href="matches.html">Back to Matches</a>
+            <a href="matches.html">
+                <span style="font-size:1.2rem;">⬅️</span><br>Back
+            </a>
+            <a href="dashboard.html">
+                <span style="font-size:1.2rem;">🌍</span><br>Home
+            </a>
         </div>
     </nav>
 
