--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
         </div>
     </nav>
 
-    <header style="text-align: center; padding: 100px 20px; flex: 1; display:flex; flex-direction:column; justify-content:center;">
-        <h1 style="font-size: 3.5rem; margin-bottom: 20px;">Where Meaningful <br>Connections Begin</h1>
-        <p style="color: var(--text-muted); font-size: 1.2rem; margin-bottom: 40px;">Join the most exclusive community for singles.</p>
-        <div>
-            <a href="signup.html" class="btn-gold">Start Your Journey</a>
+    <header style="text-align: center; padding: 60px 20px; flex: 1; display:flex; flex-direction:column; justify-content:center; min-height: 60vh;">
+        <h1 style="font-size: clamp(2.5rem, 8vw, 3.5rem); margin-bottom: 20px; line-height: 1.2;">
+            Where Meaningful <br><span style="color:white; font-size: 0.8em;">Connections Begin</span>
+        </h1>
+        <p style="color: var(--text-muted); font-size: 1.1rem; margin-bottom: 40px; max-width: 500px; margin-left: auto; margin-right: auto;">
+            Join the most exclusive community for singles.
+        </p>
+        <div style="display: flex; flex-direction: column; gap: 15px; align-items: center;">
+            <a href="signup.html" class="btn-gold" style="width: 80%; max-width: 300px;">Start Your Journey</a>
+            <a href="login.html" style="color: var(--text-muted); font-size: 0.9rem;">Already a member? Login</a>
         </div>
     </header>
 
