--- a/matches.html
+++ b/matches.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matches - NYERILOVELITE</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -9,9 +10,15 @@
     <nav>
         <div class="logo">NYERI<span style="color:var(--gold)">LOVELITE</span></div>
         <div class="nav-links">
-            <a href="dashboard.html">Discover</a>
-            <a href="#" style="color:var(--gold)">Matches</a>
-            <a href="#" class="logout-btn">Logout</a>
+            <a href="dashboard.html">
+                <span style="font-size:1.5rem;">🌍</span><br>Discover
+            </a>
+            <a href="#" style="color:var(--gold)">
+                <span style="font-size:1.5rem;">❤️</span><br>Matches
+            </a>
+            <a href="#" class="logout-btn">
+                <span style="font-size:1.5rem;">🚪</span><br>Logout
+            </a>
         </div>
     </nav>
 
